src/styles/components/_stages-of-construction.scss
.stages-of-construction {
  position: relative;
  width: 100%;
  width: 183rem;
  overflow: hidden;

  // .stages-of-construction__navigation
  &__navigation {
    position: absolute;
    top: 30rem;
    left: 120rem;
    display: flex;
    flex-direction: column;
    gap: 2rem;
    z-index: 0;
  }

  // .stages-of-construction__btn-next
  &__btn-next {
    cursor: pointer;
    width: 7rem;
    height: 7rem;
    border-radius: 50%;
    border: 1px solid $black;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 1;
  }

  // .stages-of-construction__btn-prev
  &__btn-prev {
    cursor: pointer;
    width: 7rem;
    height: 7rem;
    border-radius: 50%;
    border: 1px solid $black;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 1;
  }

  &__slide {
    z-index: 3;
    position: relative;
    display: flex;
    flex-direction: row;
    background-color: $grey;
    height: 48rem;
    width: 100%;
    max-width: 115rem;
    border-radius: 3rem;
  }

  &__block {
    padding: 10rem 5rem;
    max-width: 61.2rem;
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
  }

  // .stages-of-construction__text-container
  &__text-container {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 4rem;
  }

  // .stages-of-construction__title
  &__title {
    margin-bottom: 5rem;
    @include title($black, $drukcyr);
  }

  // .stages-of-construction__title-h3
  &__title-h3 {
    @include title-h3($black, $drukcyr);
  }

  // .stages-of-construction__text
  &__text {
    @include block-text($black, $avanti);
  }

  >span {
    position: absolute;
    right: 0;
    bottom: 0;
    width: 18rem;
    height: 6.7rem;
    border-radius: 3rem 0 0 0;
    background-color: $white;

    &:before {
      content: "";
      position: absolute;
      right: 0;
      bottom: 6.7rem;
      width: 3rem;
      height: 3rem;
      border-radius: 0 0 4rem 0;
      box-shadow: 1rem 1rem 0 1rem $white;
    }

    &:after {
      content: "";
      position: absolute;
      bottom: 0;
      right: 18rem;
      width: 3rem;
      height: 3rem;
      border-radius: 0 0 4rem 0;
      box-shadow: 1rem 1rem 0 1rem $white;
    }
  }

  // .stages-of-construction__btn

  // .stages-of-construction__btn-wrapper
  &__btn-wrapper {
    border-radius: 3rem 0 0 0;
    padding: 1rem 0 0 1rem;
    background-color: $white;
    position: absolute;
    bottom: 0;
    right: 0;

    span {
      &:before {
        content: "";
        position: absolute;
        right: 0;
        bottom: 100%;
        width: 4rem;
        height: 4rem;
        border-radius: 0 0 3rem 0;
        box-shadow: 0.5rem 0.5rem 0 0.5rem $white;
      }

      &:after {
        content: "";
        position: absolute;
        bottom: 0;
        right: 100%;
        width: 4rem;
        height: 4rem;
        border-radius: 0 0 3rem 0;
        box-shadow: 0.5rem 0.5rem 0 0.5rem $white;
      }
    }
  }

  &__btn {

    @include btn($l-green, $white);

    >svg {
      width: 1.1rem;
      height: 1.6rem;
    }

    @media (max-width: 48em) {
      >svg {
        width: 2.2rem;
        height: 3.2rem;
        stroke-width: 1.5;
      }
    }
  }

  // .stages-of-construction__btn-text
  &__btn-text {
    @include btn-text($white, $avanti);
  }

  // .stages-of-construction__img-container
  &__img-container {
    width: 100%;
    max-width: 53.8rem;
    height: 100%;
    border-radius: 4rem;

    >img {
      width: 100%;
      height: 100%;
      object-fit: cover;
      border-radius: 3rem;
    }
  }

}

@media (max-width: 48em) {
  .stages-of-construction {
    margin-left: 4rem;
    width: 100%;
  
    // .stages-of-construction__navigation
    &__navigation {
      display: none;
    }
  
  
    &__slide {
      flex-direction: column;
      height: 92.6rem;;
      border-radius: 4rem;
    }
  
    &__block {
      padding: 6.4rem 3.2rem;
      max-width: 100%;
    }
  
    // .stages-of-construction__text-container
    &__text-container {
      gap: 6.4rem;
    }
  
    >span {
      position: absolute;
      right: 0;
      bottom: 0;
      width: 18rem;
      height: 6.7rem;
      border-radius: 3rem 0 0 0;
      background-color: $white;
  
      &:before {
        content: "";
        position: absolute;
        right: 0;
        bottom: 6.7rem;
        width: 3rem;
        height: 3rem;
        border-radius: 0 0 4rem 0;
        box-shadow: 1rem 1rem 0 1rem $white;
      }
  
      &:after {
        content: "";
        position: absolute;
        bottom: 0;
        right: 18rem;
        width: 3rem;
        height: 3rem;
        border-radius: 0 0 4rem 0;
        box-shadow: 1rem 1rem 0 1rem $white;
      }
    }

  
    // .stages-of-construction__btn-wrapper
    &__btn-wrapper {
      border-radius: 3rem 0 0 0;
      padding: 1rem 0 0 1rem;
      background-color: $white;
      position: absolute;
      bottom: 0;
      right: 0;
  
      span {
        &:before {
          content: "";
          position: absolute;
          right: 0;
          bottom: 100%;
          width: 4rem;
          height: 4rem;
          border-radius: 0 0 3rem 0;
          box-shadow: 0.5rem 0.5rem 0 0.5rem $white;
        }
  
        &:after {
          content: "";
          position: absolute;
          bottom: 0;
          right: 100%;
          width: 4rem;
          height: 4rem;
          border-radius: 0 0 3rem 0;
          box-shadow: 0.5rem 0.5rem 0 0.5rem $white;
        }
      }
    }
  
    &__btn {
  
      @include btn($l-green, $white);
  
      >svg {
        width: 1.1rem;
        height: 1.6rem;
      }
  
      @media (max-width: 48em) {
        >svg {
          width: 2.2rem;
          height: 3.2rem;
          stroke-width: 1.5;
        }
      }
    }
  
    // .stages-of-construction__btn-text
    &__btn-text {
      @include btn-text($white, $avanti);
    }
  
    // .stages-of-construction__img-container
    &__img-container {
      width: 100%;
      max-width: 100%;
      height: 40rem;
      border-radius: 4rem;
  
      >img {
        width: 100%;
        height: 100%;
        object-fit: cover;
        border-radius: 4rem;
      }
    }

  }
}

